--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 
-project (photon)
+project (alita CXX)
+
+find_package(Protobuf REQUIRED)
 
 include_directories(./ ./src)
 
 aux_source_directory(./src SRCS)
+
+#PROTOBUF_GENERATE_CPP(SRCS SRCS ./src/alita_service.proto)
 
 link_libraries(brpc protobuf gflags leveldb pthread ssl crypto dl rt)
 
